# rustine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml  rustine.py
python/rustine/: __init__.py  package_index.py  solver.py  tools.py  workspace.py
src/pypubgrub/: Cargo.toml  err  log  pyproject.toml
src/pypubgrub/src/: lib.rs
