[project]
name = "rustine"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Charbel Jacquin", email = "charbeljacquin@gmail.com" }
]
dependencies = [
    "progress",
    "httpx",
    "click",
    "pubgrub @ file:///Users/jacquinc/Hack/rustine/src/pubgrub-pyo3",
    "json_stream",
    "distlib",
    "gitpython~=3.1.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = ["ipython~=8.13.2"]

[tool.setuptools.packages.find]
where = ["python"] 

[project.scripts]
rustine = "rustine.solver:main"
