[project]
name = "rustine"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Charbel Jacquin", email = "charbeljacquin@gmail.com" }
]
dependencies = [
    "progress",
    #    "httpx~=0.24.1",
    "httpx",
    "click~=8.1.3",
    "pubgrub @ file:///home/rebelcat/Hack/rustine/src/pubgrub-pyo3",
    "json_stream~=2.3.0",
    "distlib~=0.3.6",
    "gitpython~=3.1.31",
    "tomlkit~=0.11.8",
    "h2~=4.1.0",
    "appdirs~=1.4.4",
    "diskcache~=5.6.1",
    "requests~=2.31.0",
    "urllib3~=2.0.2",
    "logzero~=1.7.0",
    "platformdirs~=3.5.1",
    "wheel-filename~=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = ["ipython~=8.13.2"]

[tool.setuptools.packages.find]
where = ["python"] 

[project.scripts]
rustine = "rustine.solver:main"
